# oxidate

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  build.rs
scripts/: new-ticket.sh  remove-ticket.sh
src/: cli.rs  main.rs
src/auth/: mod.rs  oauth.rs  port.rs  tokens.rs
src/calendar/: client.rs  mod.rs  models.rs
src/tui/: app.rs  color_utils.rs  fetcher.rs  input.rs  loader.rs  mod.rs  state.rs
src/tui/widgets/: calendar.rs  event_details.rs  events.rs  mod.rs
