[package]
name = "ai-rust-calendar"
version = "0.1.0"
edition = "2021"

[dependencies]
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
webbrowser = "0.8"
portpicker = "0.1"
clap = { version = "4.4", features = ["derive"] }
google-calendar3 = "5.0"
anyhow = "1.0"

[build-dependencies]
dotenv = "0.15"
